# alexandria

./: Cargo.toml  README.md  TODO.md  default.hlsl  rust-toolchain.toml  test.hlsl  test.txt  test.vert
acsl/: Cargo.toml
acsl/src/: d3dcompile.rs  lib.rs
acsl/src/compile/: mod.rs
acsl/src/compile/ast/: display.rs  get.rs  mod.rs  parse.rs  pretty_print.rs
acsl/src/compile/lexer/: expect.rs  mod.rs  new.rs  next.rs  span.rs  type_id.rs
acsl/src/compile/semantic_analysis/: mod.rs
acsl/src/compile/tokens/: mod.rs
acsl/src/d3d/: get.rs  mod.rs  new.rs
acsl/src/hlsl/: get.rs  lower.rs  mod.rs  new.rs
acsl/src/hlsl/lower/: mod.rs
acsl/src/input_layout/: mod.rs  new.rs
acsl/src/pretty_print/: mod.rs
acsl/src/pretty_print/formatter/: mod.rs  new.rs  print_prefix.rs  write.rs
acsl/src/pretty_print/printer/: display.rs  mod.rs  new.rs
acsl/src/program/: display.rs  get.rs  mod.rs  new.rs  pretty_print.rs
acsl/src/program/types/: mod.rs
acsl/tests/: hlsl_tests.rs
acsl/tests/hlsl/: mod.rs
acsl/tests/hlsl/input/: minimal.acsl
acsl/tests/hlsl/output/: minimal.hlsl
dx12/: Cargo.toml
dx12/src/: adapter.rs  display.rs  instance.rs  lib.rs  message_box.rs  window_t.rs
dx12/src/adapter/: display_iter.rs  mod.rs
dx12/src/display/: available_resolution.rs  mod.rs  refresh_rate.rs  resolution.rs
dx12/src/error/: kind.rs  macro.rs  mod.rs
dx12/src/instance/: adapter_iter.rs  class.rs  debug.rs  mod.rs  wnd_proc.rs
dx12/src/window/: create.rs  debug.rs  mod.rs  wnd_proc.rs
dx12/src/window/graphics_3d/: command_queue.rs  debug.rs  device.rs  heap.rs  mod.rs  render_target_view.rs  swap_chain.rs
graphics/: Cargo.toml
graphics/color/: Cargo.toml
graphics/color/src/: lib.rs
graphics/color/src/color3/: display.rs  index.rs  is_finite.rs  mod.rs
graphics/color/src/color4/: display.rs  hash.rs  is_finite.rs  iter.rs  mod.rs
graphics/color/src/color_space/: linear.rs  mod.rs  srgb.rs
graphics/examples/: adapters.rs  blank-window.rs  instance-extensions.rs  instance-layers.rs  instance-version.rs
graphics/src/: lib.rs
graphics/src/device/: deref.rs  mod.rs
graphics/src/device/builder/: create.rs  get.rs  mod.rs  new.rs  set.rs
graphics/src/device/extension/: display.rs  mod.rs  strs.rs
graphics/src/device/image/: mod.rs  new.rs
graphics/src/device/inner/: create_swapchain.rs  drop.rs  get.rs  mod.rs  new.rs
graphics/src/device/queue/: get.rs  mod.rs  new.rs
graphics/src/device/swapchain/: drop.rs  get.rs  mod.rs  new.rs
graphics/src/instance/: create_debug_messenger.rs  create_window_surface.rs  deref.rs  drop.rs  enumerate_adapters.rs  enumerate_all_extensions.rs  enumerate_all_layers.rs  enumerate_extensions.rs  enumerate_layers.rs  mod.rs
graphics/src/instance/adapter/: device_builder.rs  enumerate_all_extensions.rs  enumerate_extensions.rs  eq.rs  get.rs  mod.rs  new.rs  ord.rs  supports_surface.rs  surface_present_modes.rs  swapchain_formats.rs
graphics/src/instance/builder/: create.rs  get.rs  mod.rs  new.rs  set.rs
graphics/src/instance/debug_messenger/: callback.rs  drop.rs  mod.rs  new.rs
graphics/src/instance/extension/: display.rs  mod.rs  strs.rs
graphics/src/instance/functions/: load.rs  mod.rs
graphics/src/instance/inner/: create_debug_messenger.rs  create_window_surface.rs  drop.rs  enumerate_adapters.rs  get.rs  mod.rs  new.rs
graphics/src/instance/layer/: display.rs  mod.rs  strs.rs
graphics/src/instance/surface/: drop.rs  get.rs  mod.rs
graphics/src/misc/: mod.rs
graphics/src/misc/error/: display.rs  error.rs  mod.rs  new.rs
graphics/src/misc/extension/: display.rs  get.rs  mod.rs  new.rs
graphics/src/misc/layer/: display.rs  eq.rs  get.rs  mod.rs  new.rs
graphics/src/misc/version/: constants.rs  display.rs  enumerate.rs  get.rs  mod.rs  new.rs  supports.rs
graphics/src/util/: load_device_function.rs  load_global_function.rs  load_instance_function.rs  mod.rs
graphics/window/: Cargo.toml
graphics/window/examples/: empty-window.rs
graphics/window/src/: events.rs  lib.rs
graphics/window/src/builder/: build.rs  get.rs  mod.rs  new.rs  set.rs
graphics/window/src/error/: display.rs  error.rs  mod.rs  new.rs
graphics/window/src/platform/: mod.rs
graphics/window/src/state/: get.rs  mod.rs  new.rs  set.rs
graphics/window/src/wake_handle/: mod.rs  new.rs  wake.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/compile_hlsl/: mod.rs  parse.rs  to_tokens.rs
macros/src/compile_hlsl/input/: get.rs  mod.rs  parse.rs
macros/src/compile_hlsl_file/: mod.rs  parse.rs  to_tokens.rs
macros/src/compile_hlsl_file/input/: get.rs  mod.rs  parse.rs
macros/src/compile_shader/: mod.rs  parse.rs  to_tokens.rs
macros/src/compile_shader/input/: mod.rs  parse.rs
math/: Cargo.toml
math/src/: lib.rs
math/src/matrix3x3/: mod.rs
math/src/matrix3x3/arith/: neg.rs
math/src/matrix3x3/cmp/: approx_eq.rs  clamp.rs  eq.rs  hash.rs  is_finite.rs  is_nan.rs  is_orthonormal.rs  max.rs  (+3 more)
math/src/matrix4x4/: mod.rs
math/src/quaternion/: mod.rs
math/src/vector2/: mod.rs  set.rs
math/src/vector3/: mod.rs
math/src/vector4/: mod.rs
system/: Cargo.toml
system/examples/: list-all.rs
system/src/linux/: installed_memory.rs  mod.rs  os_version.rs
system/src/windows/: mod.rs  os_version.rs
system/src/x86_64/: architecture.rs  mod.rs  model.rs
util/: Cargo.toml
util/git/: Cargo.toml
util/git/src/: current_branch.rs  current_commit.rs  lib.rs  repo_path.rs
util/src/: cstr.rs  error.rs  flags.rs  lib.rs  severity.rs
util/src/memory_size/: deref.rs  display.rs  mod.rs  new.rs  size_of.rs
util/src/uuid/: as_bytes.rs  display.rs  from_str.rs  mod.rs  new.rs
util/system/src/: lib.rs
vk/: Cargo.toml
vk/src/: create_error.rs  lib.rs
vk/src/device/: extensions.rs  mod.rs  new.rs
vk/src/functions/: global.rs  mod.rs
vk/src/global/: instance_extensions.rs  instance_layers.rs  mod.rs  new.rs
vk/src/instance/: event_callback.rs  extensions.rs  layers.rs  mod.rs  new.rs  physical_devices.rs  surface.rs
vk/src/windows/: instance_extensions.rs  mod.rs  time_zone.rs
(+3632 files in other folders)
