[package]
name = "alexandria"
description = "Platform wrapper for various game APIs"
version = "0.3.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2024"
repository = "https://github.com/shipsimfan/alexandria"
license = "GPL-3.0-or-later"
publish = false

[features]
data-format = ["dep:data-format"]
git = []

[dependencies]
data-format = { git = "https://github.com/shipsimfan/lib-data-format", optional = true }
time.git = "https://github.com/shipsimfan/lib-time"

vulkan.git = "https://github.com/shipsimfan/lib-vulkan"

[target.'cfg(windows)'.dependencies]
win32 = { git = "https://github.com/shipsimfan/lib-win32", features = ["dxgi"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux.git = "https://github.com/shipsimfan/lib-linux"
wayland.git = "https://github.com/shipsimfan/lib-wayland"


[[example]]
name = "git-info"
required-features = ["git"]
