[workspace.package]
version = "0.3.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2024"
repository = "https://github.com/shipsimfan/alexandria"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
alexandria-macros.path = "macros"


[package]
name = "alexandria"
description = "Platform wrapper for various game APIs"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
data-format = ["dep:data-format"]
git = []

[dependencies]
alexandria-macros.workspace = true

data-format = { git = "https://github.com/shipsimfan/lib-data-format", optional = true }
time.git = "https://github.com/shipsimfan/lib-time"

vulkan.git = "https://github.com/shipsimfan/lib-vulkan"

[target.'cfg(windows)'.dependencies]
win32 = { git = "https://github.com/shipsimfan/lib-win32", features = ["dxgi"] }

vulkan = { git = "https://github.com/shipsimfan/lib-vulkan", features = [
    "win32",
] }

[target.'cfg(target_os = "linux")'.dependencies]
linux.git = "https://github.com/shipsimfan/lib-linux"
wayland.git = "https://github.com/shipsimfan/lib-wayland"

vulkan = { git = "https://github.com/shipsimfan/lib-vulkan", features = [
    "wayland",
] }

[[example]]
name = "git-info"
required-features = ["git"]
