[workspace.package]
version = "0.5.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2024"
repository = "https://github.com/shipsimfan/alexandria"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
alexandria-macros.path = "macros"

vulkan.git = "https://github.com/shipsimfan/lib-vulkan"

[package]
name = "alexandria"
description = "Platform wrapper for various game APIs"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
data-format = ["dep:data-format"]
git = []

[dependencies]
alexandria-macros.workspace = true

data-format = { git = "https://github.com/shipsimfan/lib-data-format", optional = true }
time.git = "https://github.com/shipsimfan/lib-time"

[target.'cfg(windows)'.dependencies]
win32 = { git = "https://github.com/shipsimfan/lib-win32", features = ["dxgi"] }

vulkan = { workspace = true, features = ["win32"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux.git = "https://github.com/shipsimfan/lib-linux"
xkbcommon.git = "https://github.com/shipsimfan/lib-xkbcommon"
wayland.git = "https://github.com/shipsimfan/lib-wayland"

vulkan = { workspace = true, features = ["wayland"] }

[[example]]
name = "git-info"
required-features = ["git"]
