[package]
name = "acsl"
description = "Alexandria Common Shader Language"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["compile"]

program = []
compile = ["program", "dep:lct-diagnostics"]

# D3D Specific features
d3d = []
hlsl = ["program"]
d3dcompile = ["hlsl", "d3d", "dep:win32"]

[dependencies]
lct-diagnostics = { git = "https://github.com/shipsimfan/lct", optional = true }

win32 = { git = "https://github.com/shipsimfan/lib-win32", features = [
    "d3dcompiler",
], optional = true }
