[package]
name = "alexandria-macros"
description = "Macros to help Alexandria"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-util.git = "https://github.com/shipsimfan/lib-proc-macro-util"
acsl = { workspace = true, default-features = false, features = ["d3dcompile"] }
