[package]
name = "alexandria-macros"
description = "Procedural macros for alexandria"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-util.git = "https://github.com/shipsimfan/lib-proc-macro-util"
