[package]
name = "alexandria-math"
description = "Graphics focused math utilities"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
data-format = ["dep:data-format"]

[dependencies]
data-format = { workspace = true, optional = true }
