[package]
name = "alexandria-system"
description = "General system-specific implementations"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alexandria-util.workspace = true

[target.'cfg(windows)'.dependencies]
win32.workspace = true
