[package]
name = "vk"
description = "Wrapping over Vulkan"

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vulkan.git = "https://github.com/shipsimfan/lib-vulkan"

util.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
