[package]
name = "alexandria-window"
description = "Window system interaction layer"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
data-format = ["dep:data-format"]

[dependencies]
data-format = { workspace = true, optional = true }

alexandria-math.workspace = true

[target.'cfg(windows)'.dependencies]
win32.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
linux.workspace = true
wayland.workspace = true
